overflow bug

--- a/client/main.css
+++ b/client/main.css
@@ -25,7 +25,7 @@
 }
 
 .wrapper {
-  overflow:auto;
+  overflow-y:hidden;
     width:100%;
     -webkit-overflow-scrolling: touch;;
     height: 70px;
